--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A web component that wraps HTML elements and forms a drop-down menu out of them.",
   "main": "dist/wc-menu-wrapper-node.min.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "preversion": "",
+    "postversion": "git push --follow-tags"
   },
   "files": [
     "dist/wc-menu-wrapper-node.min.js",
